CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
PROJECT( poly2tri )

if(COMMAND cmake_policy)
  cmake_policy(SET CMP0003 NEW)
endif(COMMAND cmake_policy)

SET (CMAKE_MODULE_PATH "${PROJECT_SOURCE_DIR}/CMakeModules")

OPTION( BUILD_TESTBED_APPLICATION "Build TestBed" OFF )

ADD_SUBDIRECTORY(poly2tri)
IF( BUILD_TESTBED_APPLICATION )
  ADD_SUBDIRECTORY(testbed)
ENDIF(BUILD_TESTBED_APPLICATION)